--- a/src/app/modules/newsletter/newsletter/newsletter.component.html
+++ b/src/app/modules/newsletter/newsletter/newsletter.component.html
@@ -1,18 +1,10 @@
 <mat-card class="example-card">
   <mat-card-header style="justify-content: space-between;">
-    <mat-card-title>
-      {{ title }}
-    </mat-card-title>
-    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu"
-      matBadge="{{(menuItems.some(itemHasNewFeature)) ? '★' : null}}" matBadgePosition="before">
-      <mat-icon>menu</mat-icon>
-    </button>
-    <mat-menu #menu="matMenu">
-      <a *ngFor="let item of menuItems" href="{{item.url}}" [attr.target]="(item.openNewTab) ? '_blank' : null" mat-menu-item>
-        <mat-icon matBadge="{{(item.newFeature) ? '★' : null}}" matBadgePosition="before">{{ item.icon }}</mat-icon>
-        {{ item.title }}
-      </a>
-    </mat-menu>
+    <app-list-header
+      [title]="title"
+      [menuItems]="menuItems"
+    >
+    </app-list-header>
   </mat-card-header>
   <mat-divider style="margin-top: 0.5rem;"></mat-divider>
   <mat-card-content style="padding-top: 16px; flex-grow: 1; display: flex; flex-direction: column;">
